# Hired

./: README.md  package-lock.json
backend/: .gitignore  README.md  alembic.ini  main.py  manage.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 08b6a1e1366d_cleandb.py  13229fa638a7_cleandb.py  23925d54f684_cleandb.py  28aae2bed06d_cleandb.py  (+20 more)
backend/core/: JWTtokens.py  database.py  hashing.py  oauth2.py
backend/forms/: applyForm.py  cvForm.py  employerForm.py  jobSeekerForm.py  loginForm.py  userAssesmentForm.py
backend/models/: __init__.py  apply.py  education.py  employer.py  experience.py  job_post.py  mcq.py  preference.py  remainder.py  save_job.py  seeker.py  target_field.py  user.py  user_assesment.py
backend/routers/: analytics.py  apply.py  authentication.py  cvmaker.py  education.py  email_verification.py  employer.py  experience.py  google_authentication.py  job_post.py  mcq.py  notification.py  preference.py  recommendation_jobs.py  recommendation_seeker.py  remainder.py  save_job.py  seeker.py  target_field.py  user.py  user_assesment.py
backend/schemas/: apply_schema.py  authentication_schema.py  cvmaker_schema.py  education_schema.py  employer_schema.py  experience_schema.py  job_post_schema.py  mcq_schema.py  preference_schema.py  remainder_schema.py  save_job.py  save_job_schema.py  seeker_schema.py  target_field_schema.py  token_schema.py  user_assesment_schema.py  user_schema.py
backend/src/: main.py  oauth2.py
backend/templates/: after-verification.html
backend/utils/: populate.py  utils.py
(+194 files in other folders)
